--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <li class="nav-item m-2"><a  class="nav-link" href="#" id="h1o">Home</a></li>
                 <li class="nav-item m-2""><a  class="nav-link" href="#abouts" id="h1o">AboutUs</a></li>
                 <li class="nav-item m-2""><a  class="nav-link" href="#ourtrainers" id="h1o">Trainers</a></li>
-                <li class="nav-item m-2""><a  class="nav-link btn btn-danger text-white px-3  href="#">join now</a></li>
+                <li class="nav-item m-2""><a  class="nav-link btn btn-danger text-white px-3  href="form.html">join now</a></li>
             
 
             </ul>
