--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
            <div class="container text-center">
             <h1 class="display-4 fw-bold">YOUR BEST VERSION START HERE</h1>
             <P class="lead " style="color: white; font-weight: 300;"> <b>Train hard. Stay fit. Never quit. </b></P>
-            <a class=" btn btn-danger btn-lg" href="#">Join Today</a>
+            <a class=" btn btn-danger btn-lg" href="form.html">Join Today</a>
             <P class="lead m-5" style="color: white; font-weight: 600;"> <b>At Strong Style Gym, we don’t just build bodies — we build style and confidence. </b></P>
            </div>
         </div>
