--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <li class="nav-item m-2"><a  class="nav-link" href="#" id="h1o">Home</a></li>
                 <li class="nav-item m-2""><a  class="nav-link" href="#abouts" id="h1o">AboutUs</a></li>
                 <li class="nav-item m-2""><a  class="nav-link" href="#ourtrainers" id="h1o">Trainers</a></li>
-                <li class="nav-item m-2""><a  class="nav-link btn btn-danger text-white px-3  href="pages/form.html">join now</a></li>
+                <li class="nav-item m-2""><a  class="nav-link btn btn-danger text-white px-3" href="pages/form.html">join now</a></li>
             
 
             </ul>
@@ -165,7 +165,7 @@
            <div class="container text-center">
             <h1 class="display-4 fw-bold">YOUR BEST VERSION START HERE</h1>
             <P class="lead " style="color: white; font-weight: 300;"> <b>Train hard. Stay fit. Never quit. </b></P>
-            <a class=" btn btn-danger btn-lg" href="form.html">Join Today</a>
+            <a class=" btn btn-danger btn-lg" href="#dtll">submit details</a>
             <P class="lead m-5" style="color: white; font-weight: 600;"> <b>At Strong Style Gym, we don’t just build bodies — we build style and confidence. </b></P>
            </div>
         </div>
@@ -302,7 +302,7 @@
        </div>
     </section>
     <section class="py-5 bg-dark text-white">
-        <div class="container">
+        <div class="container" id="dtll">
             <h2 class="text-center fw-bold mb-4"> Join StrongStyles GYM</h2>
              <form action="" class="row g-3">
                 <div class="col-md-4">
